Sample automation java programs

--- a/test-output/old/FirstTestWithTestNGFramework/methods-alphabetical.html
+++ b/test-output/old/FirstTestWithTestNGFramework/methods-alphabetical.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>FirstTestWithTestNGFramework</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e0fea4">  <td>21/08/18 09:36:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstTestWithTestNGFramework.afterClass()[pri:0, instance:Jaswanth.Automation.PractiseTests.FirstTestWithTestNGFramework@7d3a22a9]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1686100174</td>   <td></td> </tr>
-<tr bgcolor="e0fea4">  <td>21/08/18 09:35:58</td>   <td>-19585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstTestWithTestNGFramework.openBrowser()[pri:0, instance:Jaswanth.Automation.PractiseTests.FirstTestWithTestNGFramework@7d3a22a9]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1686100174</td>   <td></td> </tr>
-<tr bgcolor="e0fea4">  <td>21/08/18 09:36:17</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstTestWithTestNGFramework.postSignUp()[pri:0, instance:Jaswanth.Automation.PractiseTests.FirstTestWithTestNGFramework@7d3a22a9]">&lt;&lt;postSignUp</td> 
-<td>&nbsp;</td>  <td>main@1686100174</td>   <td></td> </tr>
-<tr bgcolor="e0fea4">  <td>21/08/18 09:36:17</td>   <td>-616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestWithTestNGFramework.signUp()[pri:0, instance:Jaswanth.Automation.PractiseTests.FirstTestWithTestNGFramework@7d3a22a9]">signUp</td> 
-  <td>main@1686100174</td>   <td></td> </tr>
-<tr bgcolor="e0fea4">  <td>21/08/18 09:35:52</td>   <td>-25427</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstTestWithTestNGFramework.testSetup()[pri:0, instance:Jaswanth.Automation.PractiseTests.FirstTestWithTestNGFramework@7d3a22a9]">&gt;&gt;testSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1686100174</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>21/10/14 10:25:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestNGAnnotationsOrder.afterMethod()[pri:0, instance:Jaswanth.Automation.PractiseTests.SampleTestNGAnnotationsOrder@3b94d659]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@756185697</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>21/10/14 10:25:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestNGAnnotationsOrder.afterMethod()[pri:0, instance:Jaswanth.Automation.PractiseTests.SampleTestNGAnnotationsOrder@3b94d659]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@756185697</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>21/10/14 10:25:01</td>   <td>2</td> <td>&nbsp;</td><td title="&lt;&lt;SampleTestNGAnnotationsOrder.afterTest()[pri:0, instance:Jaswanth.Automation.PractiseTests.SampleTestNGAnnotationsOrder@3b94d659]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@756185697</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>21/10/14 10:25:01</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTestNGAnnotationsOrder.beforeMethod()[pri:0, instance:Jaswanth.Automation.PractiseTests.SampleTestNGAnnotationsOrder@3b94d659]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@756185697</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>21/10/14 10:25:01</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTestNGAnnotationsOrder.beforeMethod()[pri:0, instance:Jaswanth.Automation.PractiseTests.SampleTestNGAnnotationsOrder@3b94d659]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@756185697</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>21/10/14 10:25:01</td>   <td>-51</td> <td>&nbsp;</td><td title="&gt;&gt;SampleTestNGAnnotationsOrder.beforeTest()[pri:0, instance:Jaswanth.Automation.PractiseTests.SampleTestNGAnnotationsOrder@3b94d659]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@756185697</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>21/10/14 10:25:01</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestNGAnnotationsOrder.scenario1()[pri:1, instance:Jaswanth.Automation.PractiseTests.SampleTestNGAnnotationsOrder@3b94d659]">scenario1</td> 
+  <td>main@756185697</td>   <td></td> </tr>
+<tr bgcolor="a8c7ae">  <td>21/10/14 10:25:01</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestNGAnnotationsOrder.scenario3()[pri:0, instance:Jaswanth.Automation.PractiseTests.SampleTestNGAnnotationsOrder@3b94d659]">scenario3</td> 
+  <td>main@756185697</td>   <td></td> </tr>
 </table>
