--- a/test-output/old/FirstTestWithTestNGFramework/classes.html
+++ b/test-output/old/FirstTestWithTestNGFramework/classes.html
@@ -4,41 +4,37 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Jaswanth.Automation.PractiseTests.FirstTestWithTestNGFramework</td>
+<td>Jaswanth.Automation.PractiseTests.SampleTestNGAnnotationsOrder</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>signUp</td>
+<td>scenario1</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>scenario3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>testSetup</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>openBrowser</td>
+<td>beforeMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>postSignUp</td>
+<td>afterMethod</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterClass</td>
-<td>&nbsp;</td></tr>
 </table>
