Automation base framework setup

--- a/test-output/HtmlReport/HtmlReport.html
+++ b/test-output/HtmlReport/HtmlReport.html
@@ -48,7 +48,6 @@
 		<ul id='slide-out' class='side-nav fixed hide-on-med-and-down'>
 			<li class='waves-effect active'><a href='#!' view='test-view' onclick="configureView(0);chartsView('test');"><i class='material-icons'>dashboard</i></a></li>
 						<li class='waves-effect'><a href='#!' view='category-view' onclick="configureView(1)"><i class='material-icons'>label_outline</i></a></li>
-			<li class='waves-effect'><a href='#!' view='exception-view' onclick="configureView(2)"><i class='material-icons'>bug_report</i></a></li>
 			<li class='waves-effect'><a href='#!' onclick="configureView(-1);chartsView('dashboard');" view='dashboard-view'><i class='material-icons'>track_changes</i></a></li>
 		</ul>
 		<!-- report name -->
@@ -58,7 +57,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Oct 19, 2021 06:11:24 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Oct 23, 2021 11:41:22 am</span>
 			</a>
 		</ul>
 	</div>
@@ -74,8 +73,6 @@
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
 										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
-					<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
-					<li status='skip'><a href='#!'>Skip <i class='material-icons cyan-text'>redo</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -87,7 +84,7 @@
 				<i class='material-icons'>local_offer</i> Category
 				</a>
 				<ul id='category-toggle' class='dropdown-content'>
-					<li><a href='#'>@regression99</a></li>
+					<li><a href='#'>@sanity</a></li>
 					<li class='divider'></li>
 					<li class='clear'><a href='#!' clear='true'>Clear Filters</a></li>
 				</ul>
@@ -128,10 +125,10 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> feature(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> feature(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='100%'>1</span> feature(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> feature(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
                 </div>
             </div>
         </div>
@@ -142,10 +139,10 @@
                     <canvas id='child-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> scenario(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> scenario(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='100%'>1</span> scenario(s) failed, 
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> scenario(s) failed, 
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped, 
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
                 </div>
@@ -158,12 +155,12 @@
                     <canvas id='grandchild-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='77.778%'><span class='strong'>7</span> step(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>3</span> step(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='11.111%'>1</span> scenario(s) failed, 
-                    <span class='strong tooltipped' data-position='top' data-tooltip='11.111%'>1</span> skipped, 
-                    <span class='strong tooltipped' data-position='top' data-tooltip='11.111%'>0</span> others
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> scenario(s) failed, 
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped, 
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
                 </div>
             </div>
         </div>
@@ -181,11 +178,11 @@
 </div>	<div class='subview-left left'>
 		<div class='view-summary'>
 			<ul id='test-collection' class='test-collection'>
-				<li class='test displayed active has-leaf fail' status='fail' bdd='true' test-id='1'>
+				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Login</span>
-						<span class='test-time'>Oct 19, 2021 06:11:32 PM</span>
-						<span class='test-status right fail'>fail</span>
+						<span class='test-time'>Oct 23, 2021 11:41:26 am</span>
+						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class="sr-filters bdd-filters">
@@ -194,58 +191,25 @@
 	<a class="btn-floating waves-effect waves-light skip blue" title="skip"><i class='material-icons'>redo</i></a>
 	<a class="btn-floating waves-effect waves-light clear grey" title="clear"><i class='material-icons'>clear</i></a>
 </div>
-<div class='scenario node' test-id='2' status='fail'>
+<div class='scenario node' test-id='2' status='pass'>
 	<div class='category-list'>
-		<span class='category label'>@regression99</span>
+		<span class='category label'>@sanity</span>
 	</div>
-	<span class='duration right label'>0h 0m 42s+632ms</span>
+	<span class='duration right label'>0h 0m 12s+397ms</span>
 	<div class="bdd-test">
-		<div class="scenario-name"><span class='status fail' title='fail'><i class='material-icons'>cancel</i></span> Scenario: Successful Login with Valid Credentials</div>
+		<div class="scenario-name"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span> Scenario: Launch</div>
 	</div>
 	<ul class='steps'>
 		<li test-id='4' class='node given pass' status='pass'>
-			<div class="step-name" title="Jaswanth.Automation.StepDefinitions.LoginPageSteps.user_Launch_Chrome_browser()"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Given User Launch Chrome browser</div>
+			<div class="step-name" title="Algorithmic.Trading.StepDefinitions.LoginPageSteps.user_Launch_Chrome_browser()"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Given User Launch Chrome browser</div>
 			<div class="node-step"></div>
 		</li>
 		<li test-id='5' class='node when pass' status='pass'>
-			<div class="step-name" title="Jaswanth.Automation.StepDefinitions.LoginPageSteps.user_opens_URL(java.lang.String)"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>When User opens URL "http://admin-demo.nopcommerce.com/login"</div>
+			<div class="step-name" title="Algorithmic.Trading.StepDefinitions.LoginPageSteps.user_opens_URL(java.lang.String)"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>When User opens URL "https://www.dbs.com/hack2hire/in/index.html"</div>
 			<div class="node-step"></div>
 		</li>
-		<li test-id='6' class='node and pass' status='pass'>
-			<div class="step-name" title="Jaswanth.Automation.StepDefinitions.LoginPageSteps.user_enters_Email_as_and_Password_as(java.lang.String,java.lang.String)"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>And User enters Email as "admin@yourstore.com" and Password as "admin"</div>
-			<div class="node-step"></div>
-		</li>
-		<li test-id='7' class='node and pass' status='pass'>
-			<div class="step-name" title="Jaswanth.Automation.StepDefinitions.LoginPageSteps.click_on_Login()"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>And Click on Login</div>
-			<div class="node-step"></div>
-		</li>
-		<li test-id='8' class='node then pass' status='pass'>
-			<div class="step-name" title="Jaswanth.Automation.StepDefinitions.LoginPageSteps.page_Title_should_be(java.lang.String)"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Then Page Title should be "Dashboard / nopCommerce administration"</div>
-			<div class="node-step"></div>
-		</li>
-		<li test-id='9' class='node when pass' status='pass'>
-			<div class="step-name" title="Jaswanth.Automation.StepDefinitions.LoginPageSteps.user_click_on_Log_out_link()"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>When User click on Log out link</div>
-			<div class="node-step"></div>
-		</li>
-		<li test-id='10' class='node then fail' status='fail'>
-			<div class="step-name" title="Jaswanth.Automation.StepDefinitions.LoginPageSteps.page_Title_should_be(java.lang.String)"><span class='status fail' title='fail'><i class='material-icons'>cancel</i></span>Then Page Title should be "Your store. Login Test"</div>
-			<textarea disabled class="code-block">org.junit.ComparisonFailure: expected:<Your store. Login[ Test]> but was:<Your store. Login[]>
-	at org.junit.Assert.assertEquals(Assert.java:117)
-	at org.junit.Assert.assertEquals(Assert.java:146)
-	at Jaswanth.Automation.StepDefinitions.LoginPageSteps.page_Title_should_be(LoginPageSteps.java:126)
-	at ?.Page Title should be "Your store. Login Test"(file:///G:/Selenium%20BDD%20Framework/JaswanthBDDJava_Cucumber/./features/Login.feature:11)
-</textarea>
-		</li>
-		<li test-id='11' class='node and skip' status='skip'>
-			<div class="step-name" title="Jaswanth.Automation.StepDefinitions.LoginPageSteps.close_browser()"><span class='status skip' title='skip'><i class='material-icons'>redo</i></span>And close browser</div>
-			<div class="node-step">Step skipped</div>
-		</li>
-		<li test-id='12' class='node * pass' status='pass'>
-			<div class="step-name" title=""><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Jaswanth.Automation.StepDefinitions.BaseClass.tearDown(io.cucumber.java.Scenario)</div>
-			<ul class='screenshots right'>
-				<li><a data-featherlight="image" href="../embedded1.png"><i class='material-icons'>panorama</i></a></li>
-			</ul>
-			<div class="node-step">this is my failure message</div>
+		<li test-id='6' class='node then pass' status='pass'>
+			<div class="step-name" title="Algorithmic.Trading.StepDefinitions.LoginPageSteps.close_browser()"><span class='status pass' title='pass'><i class='material-icons'>check_circle</i></span>Then close browser</div>
 			<div class="node-step"></div>
 		</li>
 	</ul>
@@ -292,15 +256,15 @@
 			<ul id='category-collection' class='category-collection'>
 				<li class='category displayed active'>
 					<div class='category-heading'>
-						<span class='category-name'>@regression99</span>
+						<span class='category-name'>@sanity</span>
 						<span class='category-status right'>
-						<span class='label fail'>1</span>
+						<span class='label pass'>1</span>
 						</span>
 					</div>
 					<div class='category-content hide'>
 						<div class='category-status-counts'>
+							<span status="pass" class='label green accent-4 white-text'>Passed: 1</span>
 							
-							<span status="fail" class='label red lighten-1 white-text'>Failed: 1</span>
 							
 						</div>
 						<div class='category-tests'>
@@ -314,9 +278,9 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Oct 19, 2021 06:11:32 PM</td>
-										<td class='linked' test-id='2'>Successful Login with Valid Credentials</td>
-										<td><span class='test-status fail'>fail</span></td>
+										<td>Oct 23, 2021 11:41:26 am</td>
+										<td class='linked' test-id='2'>Launch</td>
+										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
 							</table>
@@ -332,67 +296,7 @@
 		</div>
 	</div>
 </div>
-<!-- category view --><div id='exception-view' class='view hide'>
-	<section id='controls'>
-		<div class='controls grey lighten-4'>
-			<!-- search -->
-			<div class='chip transparent' alt='Search Tests' title='Search Tests'>
-				<a href="#" class='search-div'>
-				<i class='material-icons'>search</i> Search
-				</a>
-				<div class='input-field left hide'>
-					<input id='search-tests' type='text' class='validate browser-default' placeholder='Search Tests...'>
-				</div>
-			</div>
-			<!-- search -->
-		</div>
-	</section>
-	<div class='subview-left left'>
-		<div class='view-summary'>
-			<ul id='exception-collection' class='exception-collection'>
-				<li class='exception displayed active'>
-					<div class='exception-heading'>
-						<span class='exception-name'>org.junit.ComparisonFailure</span>
-						<span class='exception-count right'><span class='label red lighten-1 white-text'>1</span></span>
-					</div>
-					<div class='exception-content hide'>
-						<div class='exception-tests'>
-							<table class='bordered table-results'>
-								<thead>
-									<tr>
-										<th>Timestamp</th>
-										<th>TestName</th>
-										<th>Status</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>Oct 19, 2021 06:12:15 PM</td>
-										<td class='linked' test-id='10'>Then Page Title should be "Your store. Login Test"</td>
-										<td>
-											<textarea disabled class="code-block">org.junit.ComparisonFailure: expected:<Your store. Login[ Test]> but was:<Your store. Login[]>
-	at org.junit.Assert.assertEquals(Assert.java:117)
-	at org.junit.Assert.assertEquals(Assert.java:146)
-	at Jaswanth.Automation.StepDefinitions.LoginPageSteps.page_Title_should_be(LoginPageSteps.java:126)
-	at ?.Page Title should be "Your store. Login Test"(file:///G:/Selenium%20BDD%20Framework/JaswanthBDDJava_Cucumber/./features/Login.feature:11)
-</textarea>
-										</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<div class='subview-right left'>
-		<div class='view-summary'>
-			<h5 class='exception-name'></h5>
-		</div>
-	</div>
-</div>
-<!-- exception view --><div id='dashboard-view' class='view hide'>
+<!-- category view --><!-- exception view --><div id='dashboard-view' class='view hide'>
 	<div class='card-panel transparent np-v'>
 		<h5>Dashboard</h5>
 
@@ -412,25 +316,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>9</div>
+					<div class='panel-lead'>3</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Oct 19, 2021 06:11:24 PM</div>
+					<div class='panel-lead'>Oct 23, 2021 11:41:22 am</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Oct 19, 2021 06:12:15 PM</div>
+			 		<div class='panel-lead'>Oct 23, 2021 11:41:39 am</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 50s+454ms</div>
+					<div class='panel-lead'>0h 0m 16s+475ms</div>
 				</div>
 			</div>
 			<div class='col s6'>
@@ -446,12 +350,12 @@
 							<th>Passed %</th>
 						</tr>
 						<tr>
-							<td>@regression99</td>
-							<td>0</td>
+							<td>@sanity</td>
 							<td>1</td>
 							<td>0</td>
+							<td>0</td>
 							<td>
-									0%
+									100%
 							</td>
 						</tr>
 					</table>
@@ -466,38 +370,38 @@
 		<script>
 			var statusGroup = {
                 parentCount: 1,
-				passParent: 0,
-				failParent: 1,
+				passParent: 1,
+				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				exceptionsParent: 1,
+				exceptionsParent: 0,
 				childCount: 1,
-				passChild: 0,
-				failChild: 1,
+				passChild: 1,
+				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
 				infoChild: 0,
 				debugChild: 0,
-				exceptionsChild: 1,
-				grandChildCount: 9,
-				passGrandChild: 7,
-				failGrandChild: 1,
+				exceptionsChild: 0,
+				grandChildCount: 3,
+				passGrandChild: 3,
+				failGrandChild: 0,
 				fatalGrandChild: 0,
 				errorGrandChild: 0,
 				warningGrandChild: 0,
-				skipGrandChild: 1,
+				skipGrandChild: 0,
 				infoGrandChild: 0,
 				debugGrandChild: 0,
-				exceptionsGrandChild: 2,
+				exceptionsGrandChild: 0,
 			};
 		</script>
 		<script>
 			var timeline = {
-			        "Login":42.632
+			        "Login":12.397
 			};
 		</script>
 	
