--- a/test-output/Selenix-Logger/dashboard.html
+++ b/test-output/Selenix-Logger/dashboard.html
@@ -52,14 +52,6 @@
 							</a>
 						</li>
 						<li>
-							<a href="exception.html">
-							<span class="nav-icon">
-							<i class="fa fa-warning"></i>
-							</span>
-							<span class="nav-text">Exceptions</span>
-							</a>
-						</li>
-						<li>
 							<a href="dashboard.html">
 							<span class="nav-icon">
 							<i class="fa fa-dashboard"></i>
@@ -96,7 +88,7 @@
 							<div class="navbar-text nav-title flex" id="pageTitle">Dashboard</div>
 							<ul class="nav nav-xs flex-row no-border pull-right">
 <li><a href="#" class="b-l"><span class="badge badge-pull">Selenix Test Reports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">Oct 19, 2021 06:11:24 PM</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">Oct 23, 2021 11:41:22 am</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 							</ul>
 						</div>
@@ -113,8 +105,8 @@
 						1
 					</div>
 					<div class="d-flex">
-						<span class="flex text-muted">Out of which 0 passed</span>
-						<span><i class="fa fa-circle-o text-success"></i> .00%</span>
+						<span class="flex text-muted">Out of which 1 passed</span>
+						<span><i class="fa fa-circle-o text-success"></i> 100.00%</span>
 					</div>
 				</div>
 			</div>
@@ -127,8 +119,8 @@
 						1
 					</div>
 					<div class="d-flex">
-						<span class="flex text-muted">Out of which 0 passed</span>
-						<span><i class="fa fa-circle-o text-primary"></i> .00%</span>
+						<span class="flex text-muted">Out of which 1 passed</span>
+						<span><i class="fa fa-circle-o text-primary"></i> 100.00%</span>
 					</div>
 				</div>
 			</div>
@@ -138,7 +130,7 @@
 						<span class="">Start</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						Oct 19, 2021 06:11:24 PM
+						Oct 23, 2021 11:41:22 am
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -152,7 +144,7 @@
 						<span class="">Time Taken</span>
 					</div>
 					<div class="py-3 text-center text-md">
-						0h 0m 50s+454ms
+						0h 0m 16s+475ms
 					</div>
 					<div class="d-flex">
 						<span class="flex"></span>
@@ -176,14 +168,14 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-danger"></i> &nbsp;Fail 100.00%</div>
+										<div><i class="badge badge-xs badge-o b-info"></i> &nbsp;Pass 100.00%</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">0 passed, 1 failed and 0 skipped</small>
+						<small class="text-muted">1 passed, 0 failed and 0 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -201,14 +193,14 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-danger"></i> &nbsp;Fail 100.00%</div>
+										<div><i class="badge badge-xs badge-o b-info"></i> &nbsp;Pass 100.00%</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">0 passed, 1 failed and 0 skipped</small>
+						<small class="text-muted">1 passed, 0 failed and 0 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -226,15 +218,15 @@
 							<div class="col-lg-5">
 								<div class="list">
 									<div class="list-item">
-										<div><i class="badge badge-xs badge-o b-danger"></i> 100%</div>
-										<div class="list-body"><span class="text-muted">Failed</span></div>
+										<div><i class="badge badge-xs badge-o b-info"></i> 100%</div>
+										<div class="list-body"><span class="text-muted">Passed</span></div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="box-footer">
-						<small class="text-muted">7 passed, 1 failed and 1 skipped</small>
+						<small class="text-muted">3 passed, 0 failed and 0 skipped</small>
 					</div>
 				</div>
 			</div>
@@ -265,9 +257,9 @@
 							<th>Others</th>
 						</tr>
 						<tr>
-							<td>@regression99</td>
-							<td>0</td>
+							<td>@sanity</td>
 							<td>1</td>
+							<td>0</td>
 							<td>0</td>
 						</tr>
 					</table>
@@ -302,7 +294,7 @@ $(document).ready(function() {
 		                datasets: [{
 		                    borderColor: 'transparent',
 		                    data: [
-		                    	0, 1, 0, 0, 0, 0
+		                    	1, 0, 0, 0, 0, 0
 		                    ],
 		                    backgroundColor: [
 		                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -336,7 +328,7 @@ $(document).ready(function() {
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	0, 1, 0, 0, 0, 0
+			                    	1, 0, 0, 0, 0, 0
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -371,7 +363,7 @@ $(document).ready(function() {
 			                datasets: [{
 			                    borderColor: 'transparent',
 			                    data: [
-			                    	7, 1, 0, 0, 0, 1
+			                    	3, 0, 0, 0, 0, 0
 			                    ],
 			                    backgroundColor: [
 			                        "#00af00", "#F7464A", "#8b0000", "#ff6347", "#FDB45C", "#1e90ff"
@@ -399,7 +391,7 @@ $(document).ready(function() {
 		})();
 	})
     var timeline = {
-"Login":42.632    };
+"Login":12.397    };
     function getRandomColor() {
         var letters = '0123456789ABCDEF';
         var color = '#';
