--- a/test-output/Selenix-Logger/exception.html
+++ b/test-output/Selenix-Logger/exception.html
@@ -133,7 +133,7 @@
 <tr class="s-fail" test-id="10" parent-id="1">
 	<td><span class="w-32 avatar circle fail"><span class="badge">fail</span></span></td>
 	<td class="_600">Then Page Title should be "Your store. Login Test" <br/><span class="text-muted text-sm">Successful Login with Valid Credentials</span></td>
-	<td>0h 0m 0s+93msc</td>
+	<td>0h 0m 0s+22msc</td>
 	<td></td>
 	<td>
 	</td>
@@ -146,7 +146,7 @@
 	at org.junit.Assert.assertEquals(Assert.java:117)
 	at org.junit.Assert.assertEquals(Assert.java:146)
 	at Jaswanth.Automation.StepDefinitions.LoginPageSteps.page_Title_should_be(LoginPageSteps.java:126)
-	at ?.Page Title should be "Your store. Login Test"(file:///G:/Selenium%20BDD%20Framework/JaswanthBDDJava_Cucumber/./features/Login.feature:11)
+	at ?.Page Title should be "Your store. Login Test"(file:///G:/DBS%20Hack2Hire%20Hackathon/Algorithmic_Trading_Automation/./features/Login.feature:11)
 </textarea>
 	</td>
 </tr>
@@ -174,7 +174,7 @@
 						            </div>
 									<ul class="nav nav-xs flex-row no-border pull-right">
 <li><a href="#" class="b-l"><span class="badge badge-pull">Selenix Test Reports</span></a></li>
-<li><a href="#" class="b-l"><span class="badge badge-pull">Oct 19, 2021 06:11:24 PM</span></a></li>
+<li><a href="#" class="b-l"><span class="badge badge-pull">Oct 23, 2021 09:18:57 am</span></a></li>
 <li><a href="#" class="b-l"><span class="badge badge-pull">4.0</span></a></li>
 								    </ul>
 								</div>
